# python-sdk

./: .bumpversion.cfg  .coveragerc  .gitignore  Dockerfile  Dockerfile.msa_sdk  README.md  build_rpm  docker-entrypoint.sh  init  install.sh  jupyter_notebook_config.py  msa_sdk.json  pre-commit  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests  sdk_to_json.py  setup.cfg  setup.py  setup.py.template  training_container
.github/: CODEOWNERS  after-release.sh  dependabot.yml
.github/workflows/: bump_verison.yml  bump_version.yml  deploy.yml  do-release.yml  run_tests.yml  update_doc.yml
int/: pack
msa-docker/front/msa_sdk_doc/: admin.html  conf_backup.html  conf_profile.html  constants.html  customer.html  device.html  index.html  lookup.html  msa_api.html  msa_sdk.json  orchestration.html  order.html  repository.html  util.html  variables.html
msa_sdk/: __init__.py  admin.py  conf_backup.py  conf_profile.py  configuration_object.py  constants.py  customer.py  device.py  elk.py  geolocation.py  lookup.py  msa_api.py  orchestration.py  order.py  order_stack.py  pops.py  profile.py  repository.py  util.py  variables.py
notebooks/: Basic.ipynb  Device Activation.ipynb
sdk/: device.py  msa_api.py
tests/: test_admin.py  test_command_stack.py  test_conf_backup.py  test_conf_profile.py  test_configuration_object.py  test_customer_delete.py  test_customer_get.py  test_customer_post.py  test_customer_put.py  test_device.py  test_device_get.py  test_device_post.py  test_device_put.py  test_devicefields.py  test_geolocation.py  test_lookup.py  test_msa_api.py  test_orchestration.py  test_order_command_execute.py  test_order_stack.py  test_pops.py  test_profie.py  test_profile_exist.py  test_repository.py  test_util.py  test_variables.py  test_yangconvertfile.yang  util.py
transformers/: action_mapper.py  base_transformer.py  category_mapper.py  metadata_enricher.py  pattern_normalizer.py  pipelines.py  transformers.py  type_mapper.py
transformers/core/: base.py
transformers/core/enums/: enums.py
transformers/core/models/: models.py
transformers/domains/: __init__.py
transformers/domains/url/: __init__.py  models.py  transformers.py  validators.py
transformers/domains/url/vendors/: __init__.py  fortinet.py  netskope.py
transformers/framework/: context.py  pipeline.py  pipelines.py
transformers/framework/transformers/: generic_transformers.py
transformers/framework/udm_transformers/: action_mapper.py  base_transformer.py  category_mapper.py  metadata_enricher.py  pattern_normalizer.py  type_mapper.py
transformers/shared/: exceptions.py  logging.py  utils.py
transformers/vendors/: fortinet_transformer.py  netskope_transformer.py  prisma_transformer.py  zscaler_transformer.py
