[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[project]
name = "msa-sdk"
version = "2.2.1"
description = "MSA Python SDK"
readme = "README.md"
authors = [{ name = "Ubiqube", email = "ubiqube@ubiqube.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["MSA", "ubiqube", "python-sdk"]
dependencies = [
    "requests == 2.32.5"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest-cov == 6.3.0", "bumpver == 2025.1131", "pip-tools == 7.5.0", "pytest == 8.4.2", "pytest-pydocstyle == 2.4.0", "pytest-isort == 4.0.0"]

[project.urls]
Homepage = "https://github.com/openmsa/python-sdk"

[project.scripts]

[tool.bumpver]
current_version = "2.2.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "🔖 Bump version {old_version} → {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version1}"',
]
"msa_sdk/__init__.py" = [
    '^__version__ = "{version}"',
    '^VERSION = "{version}"',
]
